--- a/DX.Data.Xpo.AutoMapper/DX.Data.Xpo.AutoMapper.csproj
+++ b/DX.Data.Xpo.AutoMapper/DX.Data.Xpo.AutoMapper.csproj
@@ -33,6 +33,9 @@
 		<PackageReference Include="AutoMapper" Version="13.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\DX.Data.Xpo\DX.Data.Xpo.csproj" />
