--- a/DX.Data.Xpo.Identity/DX.Data.Xpo.Identity.csproj
+++ b/DX.Data.Xpo.Identity/DX.Data.Xpo.Identity.csproj
@@ -25,7 +25,7 @@
 		<PackageTags>DXWeb Wibier DevExpress XPO ORM Microsoft Identity Advantage SQL Anywhere Sybase DB2 Interbase/Firebird MS-Access Oracle Pervasive PostgreSQL SQLite VistaDB MS-SQL MySQL</PackageTags>
 		<PackageReleaseNotes>
 			24.2.3.34: Dropped NET461, NET6 and NET7 support, Upgrade to DevExpress v24.2.3
-			24.1.5.34: Typo ID -> Id fixed in XPBaseUserStore.AddToRoleAsync
+			24.1.5.34: Typo ID -&gt; Id fixed in XPBaseUserStore.AddToRoleAsync
 			24.1.5.32: Drop .NET Framework support, Upgrade to DevExpress v24.1.5
 			23.2.3.31: Upgraded complete package with use of Microsoft.Extensions.Identity base packages, support for .NET/Blazor 8 use newer DataStore approach
 			Easier registration in Startup and DTO Models don't need to implement IXPUser interfaces anymore.
@@ -88,7 +88,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'!='net462'">
-		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.0" />
