--- a/DX.Test.Web.MVC/packages.config
+++ b/DX.Test.Web.MVC/packages.config
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="bootstrap" version="5.3.2" targetFramework="net48" />
+  <package id="bootstrap" version="5.3.3" targetFramework="net48" />
   <package id="DevExpress.Data" version="24.1.6" targetFramework="net48" />
   <package id="DevExpress.Xpo" version="24.1.6" targetFramework="net48" />
   <package id="jQuery" version="3.7.1" targetFramework="net48" />
@@ -13,10 +13,10 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.21.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.21.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.21.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
@@ -37,10 +37,10 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.1" targetFramework="net461" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.2" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
